[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Fire_AnimatedPixel/Fire_Spreadsheet.png" type="Texture" id=1]
[ext_resource path="res://Player/vippng.com-bow-and-arrow-png-623763.png" type="Texture" id=2]
[ext_resource path="res://UI/Skillbar.gd" type="Script" id=3]
[ext_resource path="res://Weapons/dagger.png" type="Texture" id=4]

[node name="Skillbar" type="ColorRect"]
margin_left = 119.719
margin_top = 13.5409
margin_right = 177.719
margin_bottom = 28.5409
color = Color( 0.282353, 0.317647, 0.305882, 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skill1" type="ColorRect" parent="."]
margin_left = 1.2287
margin_top = 1.36317
margin_right = 15.2287
margin_bottom = 14.3632
rect_pivot_offset = Vector2( 8.76503, 7.1459 )
color = Color( 0.588235, 0.627451, 0.196078, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Skill1"]
position = Vector2( 7.01895, 6.35678 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 4 )

[node name="Skill2" type="ColorRect" parent="."]
margin_left = 14.6918
margin_top = 1.0784
margin_right = 28.6918
margin_bottom = 14.0784
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fireball" type="Sprite" parent="Skill2"]
position = Vector2( 6.66064, 6.4382 )
scale = Vector2( 0.0136217, 0.0126017 )
texture = ExtResource( 1 )
normal_map = ExtResource( 1 )

[node name="Skill3" type="ColorRect" parent="."]
margin_left = 28.6019
margin_top = 1.4623
margin_right = 42.6019
margin_bottom = 14.4623
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="Sprite" parent="Skill3"]
light_mask = 64
position = Vector2( 7.1369, 6.94189 )
scale = Vector2( 0.100258, 0.127422 )
texture = ExtResource( 2 )

[node name="Skill4" type="ColorRect" parent="."]
margin_left = 42.7658
margin_top = 1.47218
margin_right = 56.7658
margin_bottom = 14.4722
rect_pivot_offset = Vector2( 8.76503, 7.1459 )
color = Color( 0, 0, 0, 0.490196 )
__meta__ = {
"_edit_use_anchors_": false
}
